kubernetes/homeassistant/components/openshift/route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: homeassistant
  namespace: homeassistant
  labels:
    app.kubernetes.io/instance: homeassistant
spec:
  host: home.apps.okd.claffey.cloud
  port:
    targetPort: https
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: reencrypt
  to:
    kind: Service
    name: homeassistant
    weight: 100
  wildcardPolicy: None
